# gen_catalyst_design

./: .gitignore  README.md  pyproject.toml
databases/: atoms_adsorbates_100_templates.db  create_templates.py
databases/templates/100/: 100_templates.db  hej.traj
databases/templates/111/: 111_templates.db  hej.traj
databases/templates/211/: 211_templates.db
examples/: reaction_rate_calculation.py  run_optimization.py  train_diffusion_model.py
results/: run_optimization.py
results/DualAnnealing/: pca.ipynb
results/GeneticAlgorithm/: pca.ipynb
results/bayesian_opt/: bayesian_opt.sh  job.err  job.out  post_processing.py  script_params.txt
results/random_search/: job.err  job.out  pca.ipynb  post_processing.py  random_search.sh  script_params.txt  write_job.py
results/speed_comparisons/: random_search.py
results/speed_comparisons/bayesian_opt/: bayes_opt.sh  post_processing.py  random_search_time.yaml  scheduler.py  write_job.py
results/speed_comparisons/random_search/: post_processing.py  random_search.sh  scheduler.py
src/gen_catalyst_design/: bash_scripter.py  optimization.py  reaction_rates.py  utils.py  utils_n.py
src/gen_catalyst_design/discrete_space_diffusion/: Dataset.py  __init__.py  conditioning.py  denoisers.py  diffusion.py  noisers.py  schedulers.py
tests/debug/: batched.traj  dataset.traj  denoised.traj  denoising.ipynb  make_datasets.py  noiser.ipynb  sampling.py  training.py
tests/rate_testing/: rate_evaluation.py  sampling_test.py  test_sampling.py  test_training.py
yaml_files/features/: features_gas.yaml
(+1465 files in other folders)
